--- a/index.html
+++ b/index.html
@@ -9265,14 +9265,129 @@
             </section> <!-- .hero -->
 
             <section class="trending">
-               <div>
                <div class="container">
-                  <h2>Trending on medium</h2>
-               </div> <!-- .container -->
-               <div class="container">
+                  <div class="trending-header">
+                     <svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width="28" height="29" viewBox="0 0 28 29" fill="none" class="ih y">
+                        <path fill="#fff" d="M0 .8h28v28H0z"></path>
+                        <g opacity="0.8" clip-path="url(#trending_svg__clip0)">
+                           <path fill="#fff" d="M4 4.8h20v20H4z"></path>
+                           <circle cx="14" cy="14.79" r="9.5" stroke="#000"></circle>
+                           <path d="M5.46 18.36l4.47-4.48M9.97 13.87l3.67 3.66M13.67 17.53l5.1-5.09M16.62 11.6h3M19.62 11.6v3" stroke="#000" stroke-linecap="round"></path>
+                        </g>
+                        <defs>
+                           <clipPath id="trending_svg__clip0">
+                                 <path fill="#fff" transform="translate(4 4.8)" d="M0 0h20v20H0z"></path>
+                           </clipPath>
+                        </defs>
+                     </svg>
+                     <h3>Trending on medium</h3>
+                  </div> <!-- .trending-header -->
 
-               </div>
-            </div>
+                  <div class="trending-cards">
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>01</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Tom Cooper</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">Ukraine War, 23 October 2022</a></h2>
+                           <span>Oct 23 - 5 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>02</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Arthur Hayes in Entrepreneur's Handbook</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">Comeback</a></h2>
+                           <span>Oct 26 - 24 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>03</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Tom Cooper</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">How I Learned to Love My Breasts Even Though One Is A Horcrux For Voldemort</a></h2>
+                           <span>Oct 26 - 2 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>04</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Frank Mastropolo in The Riffk</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">The Night Paul McCartney Donned a Disguise at Fillmore East</a></h2>
+                           <span>Oct 22 - 3 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>05</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Frank Andrade in Towards Data Science</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">5 Python Projects to Automate Your Life: From Beginner to Advanced</a></h2>
+                           <span>Oct 13 - 6 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                     <div class="trending-card">
+                        <div class="trending-number">
+                           <span>06</span>
+                        </div> <!-- .trending-number -->
+
+                        <div class="trending-text">
+                           <div class="trending-author">
+                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><span>Wesley Smits in JavaScript in Plain English</span></a>
+                           </div> <!-- .trending-author -->
+
+                           <h2><a href="#">How To Make Visual Studio Code Look Amazing</a></h2>
+                           <span>Oct 20 - 7 min read</span>
+                        </div> <!-- .trending-text -->
+
+                     </div> <!-- .trending-card -->
+
+                  </div> <!-- .trending-cards -->
+               </div> <!-- .container -->
             </section> <!-- .trending -->
          </main>
 
