add change on scroll & animation

--- a/index.html
+++ b/index.html
@@ -9435,7 +9435,7 @@
                               <h3><a href="#">What we consider “old” changes dramatically with age, and our perspectives can be predictive of how well we age</a></h3>
                               <div class="title-footer">
                                  <span>Oct 27 · 5 min read ·</span>
-                                 <a href="" class="btn-article">Aging</a>
+                                 <a href="#" class="btn-article">Aging</a>
                                  <div class="star">
                                     <svg  xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width="20" height="20" viewBox="0 0 20 20" fill="none"><path d="M12.4 12.77l-1.81 4.99a.63.63 0 0 1-1.18 0l-1.8-4.99a.63.63 0 0 0-.38-.37l-4.99-1.81a.62.62 0 0 1 0-1.18l4.99-1.8a.63.63 0 0 0 .37-.38l1.81-4.99a.63.63 0 0 1 1.18 0l1.8 4.99a.63.63 0 0 0 .38.37l4.99 1.81a.63.63 0 0 1 0 1.18l-4.99 1.8a.63.63 0 0 0-.37.38z" fill="#FFC017"></path></svg>
                                  </div> <!-- .star -->
@@ -9735,6 +9735,8 @@
 
 
 
+      <!-- Scripts JS -->
+      <script src="assets/js/scripts.js"></script>
 
    </body>
 </html>
