--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
          <main>
             <section class="hero">
+
+               <!-- ARTWORK con "M" ripetute -->
                <div class="animation-emme">
-                  <!-- ARTWORK con "M" ripetute -->
                   <svg
                   xmlns="http://www.w3.org/2000/svg"
 
@@ -9257,7 +9258,7 @@
 
                <div class="container">
                   <div>
-                     <h1>Stay curious</h1>
+                     <h1>Stay curious.</h1>
                      <h2>Discover stories, thinking, and expertise from writers on any topic.</h2>
                      <a href="#" class="btn">Start reading</a>
                   </div>
@@ -9727,13 +9728,7 @@
                </div> <!-- .container -->   
             </section>
          </main>
-
-         
       </div> <!-- .overflow // lo uso di default nel caso debba utilizzare overflow: hidden per nascondere la svg in eccesso -->
-
-
-
-
 
       <!-- Scripts JS -->
       <script src="assets/js/scripts.js"></script>
