add responsive tablet

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                      <li><a href="#">Our Story</a></li>
                      <li><a href="#">Membership</a></li>
                      <li><a href="#">Write</a></li>
-                     <li><a href="#">Sign In</a></li>
-                     <li><a href="#" class="btn">Get Started</a></li>
+                     <li><a href="#" class="tablet-active">Sign In</a></li>
+                     <li><a href="#" class="btn tablet-active">Get Started</a></li>
                   </ul>
                </div> <!-- .container -->
             </div> <!-- .header -->
