overflow:hidden da body a hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
    </head>
 
    <body>
-      <div class="overflow">
+      <!-- 
+         Elimino questo contenitore specifico per la proprietà overflow:hidden perchè la sua presenza non mi permette di implementare il position:sticky all'aside.
+         Andrò ad assegnare overflow:hidden al div.hero
+      
+         <div class="overflow">
+      -->
 
          <header>
             <div class="header">
@@ -9728,10 +9733,10 @@
                </div> <!-- .container -->   
             </section>
          </main>
-      </div> <!-- .overflow // lo uso di default nel caso debba utilizzare overflow: hidden per nascondere la svg in eccesso -->
+      <!-- </div>  .overflow // lo uso di default nel caso debba utilizzare overflow: hidden per nascondere la svg in eccesso -->
 
       <!-- Scripts JS -->
-      <script src="assets/js/scripts.js"></script>
+      <script src="assets/js/scripts4.js"></script>
 
    </body>
 </html>
