corretto il nome dello scripts.js

--- a/index.html
+++ b/index.html
@@ -9736,7 +9736,7 @@
       <!-- </div>  .overflow // lo uso di default nel caso debba utilizzare overflow: hidden per nascondere la svg in eccesso -->
 
       <!-- Scripts JS -->
-      <script src="assets/js/scripts4.js"></script>
+      <script src="assets/js/scripts.js"></script>
 
    </body>
 </html>
