update img src in trending section

--- a/index.html
+++ b/index.html
@@ -9314,7 +9314,7 @@
 
                         <div class="trending-text">
                            <div class="trending-author">
-                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><img src="assets/imgs/image02.png" alt=""></a>
                               <a href="#"><span>Arthur Hayes in Entrepreneur's Handbook</span></a>
                            </div> <!-- .trending-author -->
 
@@ -9331,7 +9331,7 @@
 
                         <div class="trending-text">
                            <div class="trending-author">
-                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><img src="assets/imgs/image03.jpeg" alt=""></a>
                               <a href="#"><span>Tom Cooper</span></a>
                            </div> <!-- .trending-author -->
 
@@ -9348,7 +9348,7 @@
 
                         <div class="trending-text">
                            <div class="trending-author">
-                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><img src="assets/imgs/image04.png" alt=""></a>
                               <a href="#"><span>Frank Mastropolo in The Riffk</span></a>
                            </div> <!-- .trending-author -->
 
@@ -9365,7 +9365,7 @@
 
                         <div class="trending-text">
                            <div class="trending-author">
-                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><img src="assets/imgs/image05.jpeg" alt=""></a>
                               <a href="#"><span>Frank Andrade in Towards Data Science</span></a>
                            </div> <!-- .trending-author -->
 
@@ -9382,7 +9382,7 @@
 
                         <div class="trending-text">
                            <div class="trending-author">
-                              <a href="#"><img src="assets/imgs/image01.jpeg" alt=""></a>
+                              <a href="#"><img src="assets/imgs/image06.png" alt=""></a>
                               <a href="#"><span>Wesley Smits in JavaScript in Plain English</span></a>
                            </div> <!-- .trending-author -->
 
